login signup corrected

--- a/www/css/auth/login.css
+++ b/www/css/auth/login.css
@@ -1,5 +1,5 @@
 #loginform{
-	background: url("../../img/chat-background-1.png");
+	background: url("../../img/auth/background.jpg");
 	background-size: cover;
 }
 #loginform #formdetails{
