--- a/www/templates/auth/login.html
+++ b/www/templates/auth/login.html
@@ -2,7 +2,7 @@
    <ion-content id="loginform">
       <div id="formdetails">
          <center>
-            <img src="img/roofpik.png" width=40 height=60>
+            <img src="img/auth/roofpik.png">
          </center>
          <h3 style="text-align: center">Roofpik</h3>
          <div class="list list-inset" >
