--- a/www/templates/auth/signup.html
+++ b/www/templates/auth/signup.html
@@ -32,7 +32,7 @@
             <button class="button button-block" id="bluebgcolor" ng-click="signup()">Signup</button>
          </div>
          <div id="askforaccount">
-            Already have an account? <a id="bluecolor" href="#/login"><strong>Login</strong></a>
+            Already have an account? <a id="bluecolor" ng-click="goToLogin()"><strong>Login</strong></a>
          </div>
       </ion-content>
    </form>
