--- a/www/css/auth/signup.css
+++ b/www/css/auth/signup.css
@@ -54,6 +54,7 @@ height:48px;
 
 #askforaccount {
 	font-size: 0.9em;
-	margin-top: 20px;
+	margin-top: 10px;
 	text-align: center;
+	padding:10px 0;
 }
