--- a/www/templates/auth/signup.html
+++ b/www/templates/auth/signup.html
@@ -31,8 +31,8 @@
             </div>
             <button class="button button-block" id="bluebgcolor" ng-click="signup()">Signup</button>
          </div>
-         <div id="askforaccount">
-            Already have an account? <a id="bluecolor" ng-click="goToLogin()"><strong>Login</strong></a>
+         <div id="askforaccount" ng-click="goToLogin()">
+            Already have an account? <a id="bluecolor" ><strong>Login</strong></a>
          </div>
       </ion-content>
    </form>
