added home page, reviews, select location and project search

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -5,3 +5,6 @@
 @import url("auth/login.css");
 @import url("auth/logout.css");
 @import url("auth/signup.css");
+@import url("home/home.css");
+@import url("home/side-menu.css");
+@import url("projects/review.css");
