--- a/www/templates/home/home.html
+++ b/www/templates/home/home.html
@@ -3,13 +3,13 @@
     <div class="list top-search" id="searchProjectBar">
       <label class="item item-input" id="projectSearchLabel" >
         <input type="text" placeholder="Search Projects" ng-click="goToProjectSearch(1)" />
-        <i class="icon ion-search placeholder-icon home-page-search-icon"></i>
+        <i class="icon ion-android-search placeholder-icon home-page-search-icon"></i>
       </label>
     </div>
     <div class="scrollBar">
       <ion-scroll direction="x" class="wide-as-needed">
         <div>
-          <img src="img/home/key-running-ad.png" class="SliderImg" id="imgOne">
+          <img src="img/home/key-running-ad.jpg" class="SliderImg" id="imgOne">
         </div>
         <div>
           <img src="img/home/girl-child-edu.jpg" class="SliderImg">
@@ -50,8 +50,21 @@
            </div>
         </div>
     </div>
-    <div class="MenuItems refer-friend">
-      <img src="img/home/home_refer-a-friend.jpg" />
+    <div class="MenuItems">
+        <div class="row">
+           <div class="col col-text">
+              <div class="menu-heading">
+                 Refer a friend
+              </div>
+              <div class="menu-text">
+                Get friends and family to find the best property options by downloading our app.
+              </div>
+          </div>
+          <div class="col">
+              <img src="img/home/home_refer-a-friend.jpg" />
+           </div>
+        </div>
+      <!-- <img src="img/home/home_refer-a-friend.jpg" /> -->
     </div>
   </ion-content>
 </ion-view>
