--- a/www/templates/auth/signup.html
+++ b/www/templates/auth/signup.html
@@ -17,13 +17,10 @@
                   <input class="signup-roofpik" type="text" placeholder="Enter Your Name" ng-model="user.name">
                </label>
                <label class="item item-input ion-ios-email-outline">
-                  <input class="signup-roofpik" type="text" placeholder="Email Address" ng-model="user.email">
+                  <input class="signup-roofpik" type="email" placeholder="Email Address" ng-model="user.email">
                </label>
                <label class="item item-input ion-iphone">
                   <input class="signup-roofpik" type="number" placeholder="Mobile number" ng-model="user.mobileNum">
-               </label>
-               <label class="item item-input ion-ios-locked-outline">
-                  <input class="signup-roofpik" type="password" placeholder="Password" ng-model="user.password">
                </label>
                <label class="item item-input ion-bonfire">
                   <input class="signup-roofpik" type="text" placeholder="Referral Code" ng-model="user.referralCode">
