--- a/www/templates/home/home.html
+++ b/www/templates/home/home.html
@@ -7,12 +7,11 @@
             </label>
         </div>
         <div class="scrollBar">
-            <ion-scroll direction="x" class="wide-as-needed">
-              
+            <ion-scroll direction="x" style="width: 220%">
+                <div style="width: 140%; height:auto; display:inline-block;"">
                     <img src="img/home/key-running-ad.jpg" class="SliderImg" id="imgOne">
-              
-                
                     <img src="img/home/girl-child-edu.jpg" class="SliderImg">
+                    </div>
                 
             </ion-scroll>
         </div>
