replaced refer a friend image

--- a/www/templates/home/home.html
+++ b/www/templates/home/home.html
@@ -38,7 +38,7 @@
         <div class="MenuItems">
             <div class="row" ng-click="goToProjectSearch(2)">
                 <div class="col">
-                    <img src="img/home/write-review.png" />
+                    <img src="img/home/write-review.png"/>
                 </div>
                 <div class="col col-text">
                     <div class="menu-heading">
@@ -51,9 +51,19 @@
             </div>
         </div>
         <div class="MenuItems refer-friend">
-            <!-- <div class="row"> -->
-            <img src="img/home/home_refer-a-friend.jpg" />
-            <!-- </div> -->
+            <div class="row">
+                <div class="col col-text">
+                    <div class="menu-heading">
+                        Explore Projects
+                    </div>
+                    <div class="menu-text">
+                        Find detailed information about real estate projects at your fingertips here.
+                    </div>
+                </div>
+                <div class="col">
+                    <img src="img/home/home_refer-a-friend.png" />
+                </div>
+            </div>
         </div>
     </ion-content>
 </ion-view>
