added property list

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -7,3 +7,4 @@
 @import url("home/home.css");
 @import url("home/side-menu.css");
 @import url("projects/review.css");
+@import url("projects/properties.css");
