--- a/www/templates/home/home.html
+++ b/www/templates/home/home.html
@@ -20,7 +20,7 @@
             <button class="button icon-right button-calm bluebgcolor" ng-click="openNearby()">Nearby<img src="img/home/nearby.png" width=25 height=25/></button>
         </div>
         <div class="MenuItems">
-            <div class="row" ng-click="modal.show()">
+            <div class="row" ng-click="takeToProjects()">
                 <div class="col col-text">
                     <div class="menu-heading">
                         Explore Projects
@@ -53,10 +53,10 @@
             <div class="row">
                 <div class="col col-text">
                     <div class="menu-heading">
-                        Explore Projects
+                        Refer A Friend
                     </div>
                     <div class="menu-text">
-                        Find detailed information about real estate projects at your fingertips here.
+                        Get friends and family to find the best property options by downloading our app.
                     </div>
                 </div>
                 <div class="col">
