--- a/www/templates/projects/properties.html
+++ b/www/templates/projects/properties.html
@@ -22,19 +22,27 @@
                </h3>
                <div class="property-info" >
                   <div class="BHK">
-                     <div class="row" style="padding:0px 5px;">
-                        <div class="col">
+                     <div class="row">
+                        <div class="col col-50" style="text-align:left; " >
                            <p>{{project.bhk}}</p>
                         </div>
-                        <div class="col" style="text-align:left;font-size:0.8em;padding-left: 30%;">
-                           <span ng-show="project.showBuyRange"><strong>Buy</strong>  {{project.rangeBuy}}</span>
+                        <div class="col col-10 col-offset-10" style="text-align:left;font-size:0.8em; ">
+                           <strong ng-show="project.showBuyRange">Buy</strong> 
                         </div>
+                        <div class="col col-20" style="text-align:left;font-size:0.8em; margin-right:2px;  ">
+                           <div ng-show="project.showBuyRange"> {{project.rangeBuy}}</div>
+                        </div>
+                        <div class="col col-10"></div>
                      </div>
                      <div class="row" style="padding:0px 5px;">
-                        <div class="col"></div>
-                        <div class="col" style="text-align:left;font-size:0.8em;padding-left: 30%;">
-                           <span ng-show="project.showRentRange"><strong>Rent</strong>  {{project.rangeRent}}</span>
+                        <div class="col col-50"></div>
+                        <div class="col col-10 col-offset-10" style="text-align:left;font-size:0.8em; ">
+                           <strong ng-show="project.showRentRange">Rent</strong> 
                         </div>
+                        <div class="col col-20" style="text-align:left;font-size:0.8em; margin-right:2px; ">
+                           <div ng-show="project.showRentRange"> {{project.rangeRent}}</div>
+                        </div>
+                        <div class="col col-10"></div>
                      </div>
                   </div>
                </div>
