Refer a friend added

--- a/www/templates/home/side-menu.html
+++ b/www/templates/home/side-menu.html
@@ -25,10 +25,12 @@
          <ion-list>
             <ion-item menu-close href="#/profile">
                My Profile
-            </ion-item><ion-item menu-close ng-click="neighbourhoodRoute()">
+            </ion-item>
+            <ion-item menu-close ng-click="neighbourhoodRoute()">
                BeeSocial
             </ion-item>
-            </ion-item><ion-item menu-close ng-click="referFriendRoute()">
+            </ion-item>
+            <ion-item menu-close href="#/refer-friend">
                Refer A Friend
             </ion-item>
             <ion-item menu-close href="#/privacyPolicy">
