--- a/www/templates/home/side-menu.html
+++ b/www/templates/home/side-menu.html
@@ -30,7 +30,7 @@
                BeeSocial
             </ion-item>
             </ion-item>
-            <ion-item menu-close href="#/refer-friend">
+            <ion-item menu-close ng-click="referFriendRoute()">
                Refer A Friend
             </ion-item>
             <ion-item menu-close href="#/privacyPolicy">
