added profile page

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -9,6 +9,7 @@
 @import url("projects/review.css");
 @import url("projects/properties.css");
 @import url("user/refer.css");
+@import url("user/profile.css");
 
 
 @font-face {
