--- a/www/templates/home/side-menu.html
+++ b/www/templates/home/side-menu.html
@@ -23,7 +23,7 @@
       </ion-header-bar>
       <ion-content>
          <ion-list>
-            <ion-item menu-close href="#/profile">
+            <ion-item menu-close ng-click="myProfile()">
                My Profile
             </ion-item>
             <ion-item menu-close ng-click="neighbourhoodRoute()">
