--- a/www/css/style.css
+++ b/www/css/style.css
@@ -8,6 +8,7 @@
 @import url("home/side-menu.css");
 @import url("projects/review.css");
 @import url("projects/properties.css");
+@import url("projects/nearby.css");
 @import url("user/refer.css");
 
 
