--- a/www/css/home/side-menu.css
+++ b/www/css/home/side-menu.css
@@ -39,10 +39,10 @@
 }
 
 #side-menu .side-menu-header {
-	background-color:#444444;
+	background-color:#fff;
 
 }
 
 #side-menu .side-menu-header h1 {
-	color:#fff;
+	color:#444;
 }
