--- a/www/templates/home/home.html
+++ b/www/templates/home/home.html
@@ -3,12 +3,12 @@
         <div class="list top-search" id="searchProjectBar">
             <label class="item item-input" id="projectSearchLabel">
                 <input type="text" placeholder="Search Projects" ng-click="goToProjectSearch(1)" />
-                <i class="icon ion-search placeholder-icon home-page-search-icon"></i>
+                <i class="icon ion-android-search placeholder-icon home-page-search-icon"></i>
             </label>
         </div>
         <div class="scrollBar">
             <ion-scroll direction="x" style="width: 220%">
-                <div style="width: 140%; height:auto; display:inline-block;"">
+                <div style="width: 140%; height:auto; display:inline-block;padding:6px 0px 0px 0px;">
                     <img src="img/home/key-running-ad.jpg" class="SliderImg" id="imgOne" ng-click="goToRoofpik()">
                     <img src="img/home/girl-child-edu.jpg" class="SliderImg" ng-click="goToRefer()">
                     </div>
