--- a/www/templates/home/side-menu.html
+++ b/www/templates/home/side-menu.html
@@ -33,10 +33,10 @@
             <ion-item menu-close ng-click="referFriendRoute()">
                Refer A Friend
             </ion-item>
-            <ion-item menu-close href="#/privacyPolicy">
+            <ion-item menu-close ng-click="privacyPolicy()">
                Privacy and Policy
             </ion-item>
-            <ion-item menu-close href="#/termsnConditions">
+            <ion-item menu-close ng-click="termsNcndtn()">
                Terms and Conditions
             </ion-item>
             <ion-item menu-close ng-click="logoutFunc()">
