splash screen and app icon updated

--- a/www/templates/app/app-start.html
+++ b/www/templates/app/app-start.html
@@ -1,7 +1,14 @@
-<ion-view>
-    <ion-content>
-        <center>
-            <img src="img/auth/roofpik.png">
-        </center>
-    </ion-content>
+<ion-view class="pane">
+<ion-content>
+</ion-content>
+<style type="text/css">
+.pane{
+background:url('img/app/start.png') no-repeat center center fixed; 
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        background-size: cover;
+}
+</style>
+
+
 </ion-view>
