--- a/www/templates/app/intro-slider.html
+++ b/www/templates/app/intro-slider.html
@@ -56,6 +56,6 @@
     <script id="templates/loading.html" type="text/ng-template">
         <ion-spinner class="light"></ion-spinner>
         <br />
-        <span>Please wait a few seconds...</span>
+        <span>Please wait...</span>
     </script>
 </ion-view>
