--- a/www/templates/app/network.html
+++ b/www/templates/app/network.html
@@ -1,5 +1,12 @@
-<ion-view>
-    <ion-content>
-        <h1>You are currently offline</h1>
-    </ion-content>
+<ion-view class="pane">
+<ion-content>
+</ion-content>
+<style type="text/css">
+.pane{
+background:url('img/app/network.png') no-repeat center center fixed; 
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        background-size: cover;
+}
+</style>
 </ion-view>
