--- a/www/templates/app/network.html
+++ b/www/templates/app/network.html
@@ -1,8 +1,8 @@
-<ion-view class="pane">
-<ion-content>
+<ion-view>
+<ion-content class="pane1">
 </ion-content>
 <style type="text/css">
-.pane{
+.pane1{
 background:url('img/app/network.png') no-repeat center center fixed; 
         -webkit-background-size: cover;
         -moz-background-size: cover;
