--- a/www/templates/project-details/tab-reviews.html
+++ b/www/templates/project-details/tab-reviews.html
@@ -79,7 +79,7 @@
             </div>
          </div>
          <div class="item-divider c-item-divider"></div>
-         <div 
+        <!--  <div 
             ng-if="percentageReview.convenientlyLocated !=0 && percentageReview.publicTransportAccessible !=0" 
             class="item indexes-item">
             <div class="col">
@@ -126,7 +126,7 @@
                   </div>
               </div>
             </div>
-         </div>
+         </div> -->
           <div class="item-divider c-item-divider"></div>
           <div class="item pricing-review" ng-repeat="review in projectReview">
               <div class="row">
