--- a/www/templates/project-details/tabs.html
+++ b/www/templates/project-details/tabs.html
@@ -16,19 +16,19 @@ navigation history that also transitions its views in and out.
   </ion-tab>
 
   <!-- Pricing Tab -->
-  <ion-tab title="Pricing" icon-off="pricing-off" icon-on="pricing-on" href="#/project-details/pricing">
+  <!-- <ion-tab title="Pricing" icon-off="pricing-off" icon-on="pricing-on" href="#/project-details/pricing">
     <ion-nav-view name="tab-pricing"></ion-nav-view>
-  </ion-tab>
+  </ion-tab> -->
 
   <!-- Amenities Tab -->
-  <ion-tab title="Amenities" icon-off="amenities-off" icon-on="amenities-on" href="#/project-details/amenities">
+  <!-- <ion-tab title="Amenities" icon-off="amenities-off" icon-on="amenities-on" href="#/project-details/amenities">
     <ion-nav-view name="tab-amenities"></ion-nav-view>
-  </ion-tab>
+  </ion-tab> -->
 
   <!-- Near Me Tab -->
-  <ion-tab title="Near Me" icon-off="nearme-off" icon-on="nearme-on" href="#/project-details/nearme">
+  <!-- <ion-tab title="Near Me" icon-off="nearme-off" icon-on="nearme-on" href="#/project-details/nearme">
     <ion-nav-view name="tab-nearme"></ion-nav-view>
-  </ion-tab>
+  </ion-tab> -->
 
 
 </ion-tabs>
