--- a/www/templates/app/landing.html
+++ b/www/templates/app/landing.html
@@ -12,6 +12,6 @@ background:url('img/app/start.png') no-repeat center center fixed;
     <script id="templates/loading.html" type="text/ng-template">
         <ion-spinner class="light"></ion-spinner>
         <br />
-        <span>Please wait...</span>
+        <span>Please wait</span>
     </script>
 </ion-view>
