--- a/www/templates/app/bee-social.html
+++ b/www/templates/app/bee-social.html
@@ -1,4 +1,8 @@
 <ion-view >
+   <ion-header-bar class="bar-dark" align-title="center">
+      <a class="button icon ion-chevron-left button-dark" ng-click="myGoBack()"></a>
+      <h1 class="title">BeeSocial</h1>
+   </ion-header-bar>
 <ion-content class="pane1">
 </ion-content>
 <style type="text/css">
