--- a/www/templates/auth/logout.html
+++ b/www/templates/auth/logout.html
@@ -1,5 +1,5 @@
-<ion-view id="logout-page">
-   <ion-content>
+<ion-view >
+   <ion-content id="logout-page"> 
       
    </ion-content>
 </ion-view>
