--- a/www/templates/home/home.html
+++ b/www/templates/home/home.html
@@ -1,4 +1,9 @@
-<ion-view id="home-page" cache-view="true">
+<ion-view id="home-page" cache-view="false">
+<style>
+.title-left{
+    display: none !important;
+}
+</style>
     <ion-content has-header="true">
         <div class="list top-search" id="searchProjectBar">
             <label class="item item-input" id="projectSearchLabel">
