--- a/www/css/auth/logout.css
+++ b/www/css/auth/logout.css
@@ -1,4 +1,4 @@
 #logout-page{
-   background: url("../../img/log-out-screen.jpg") no-repeat center center;
+   background: url("../../img/auth/log-out-screen.jpg") no-repeat center center;
    background-size: cover;
 }
