--- a/www/templates/app/bee-social.html
+++ b/www/templates/app/bee-social.html
@@ -1,4 +1,4 @@
-<ion-view >
+<ion-view cache-view="false">
    <ion-header-bar class="bar-dark" align-title="center">
       <a class="button icon ion-chevron-left button-dark" ng-click="myGoBack()"></a>
       <h1 class="title">BeeSocial</h1>
