--- a/www/templates/project-details/tab-overview.html
+++ b/www/templates/project-details/tab-overview.html
@@ -1,4 +1,13 @@
 <ion-view class="projectDetails-view" view-title="Overview">
+<style>
+  #writeReview {
+        background-color: #444;
+    color: #fff;
+    font-size: 1.2em;
+    font-weight: bold;
+    text-align: center;
+  }
+</style>
   <data ng-include="'templates/project-details/header.html'"></data>
   <ion-content class="has-header project-details overview-content">
     <div class="list">
@@ -270,6 +279,9 @@
           <img class="c-icon-h" src="icons/neighbourhood.png" alt="">
        </a>
        <div class="item-divider c-item-divider"></div>
+       <div class="card padding" id="writeReview" ng-click="takeToReview()">
+         Write a review
+       </div>
     </div> 
   </ion-content>
 </ion-view>
