--- a/www/templates/project-details/tab-overview.html
+++ b/www/templates/project-details/tab-overview.html
@@ -1,4 +1,4 @@
-<ion-view class="projectDetails-view" view-title="Overview">
+<ion-view class="projectDetails-view" view-title="Overview" cache-view="false">
   <data ng-include="'templates/project-details/header.html'"></data>
   <ion-content class="has-header project-details overview-content">
     <div class="list">
